src/test/AmbiguousCall/AmbiguousCall.expected
error: AmbiguousCall.panda:11:1: call to 'ambiguous' with parameters (panda.core.Int8, panda.core.Int8) is ambiguous. The following methods are all equally good matches:
    method ambiguous(i:panda.core.Int32, r:panda.core.Real64) (AmbiguousCall.panda:3:5)
    method ambiguous(r:panda.core.Real64, i:panda.core.Int32) (AmbiguousCall.panda:7:5)
1 error
