src/test/AmbiguousCall/AmbiguousCall.panda
class AmbiguousCall {
    @class
    method ambiguous(i:Int, r:Real) {
    }

    @class
    method ambiguous(r:Real, i:Int) {
    }
}

AmbiguousCall.ambiguous(0, 0)